--- a/inventory.ini
+++ b/inventory.ini
@@ -8,4 +8,4 @@ backend.aws-9s.shop
 aws-9s.shop
 
 [all:vars]
-ansible_password = DevOps321 #this variable is for all hosts
+ansible_password = DevOps321 
