--- a/roles/backend/vars/main.yaml
+++ b/roles/backend/vars/main.yaml
@@ -2,4 +2,7 @@ login_user: root
 login_host: db.aws-9s.shop
 login_password: ExpenseApp@1 
 DB_HOST: db.aws-9s.shop
+app_location: /app
+component: backend
+
 
